crates/clipboard/src/snapshots/telmo_clipboard__ui__tests__color.snap
---
source: crates/clipboard/src/ui.rs
expression: render(&f)
---
 Clipboard                                                                          13 items · last 30 days

╭─ History ──────────────────────────╮╭─ Color ────────────────────────────────────────────────────────────╮
│  Pinned                            ││                                                                    │
│   󰉢 ssh daniel@mantle -t tmux at… 󰐃││  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                                          │
│   󰉢 +54 9 11 5555 0142            󰐃││  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                                          │
│  Recent                            ││  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                                          │
│   󰉢 sudo darwin-rebuild switch … 2m││  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                                          │
│   󰋩 Screenshot 1440×900          5m││  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                                          │
│   󰌷 github.com/syntheit/telmo/… 18m││                                                                    │
│ ▌ 󰏘 #7aa2f7                      1h││  #7aa2f7                                                           │
│   󰉢 Meeting moved to 3:30, same… 1h││  rgb(122, 162, 247)                                                │
│   󰈔 invoice-2026-10.pdf          3h││  hsl(221, 89%, 72%)                                                │
│   󰅩 fn main() { println!("hello… 5h││                                                                    │
│   󰉢 hunter2-correct-hors… yesterday││                                                                    │
│   󰋩 IMG_4021.HEIC 4032×3… yesterday││                                                                    │
│   󰌷 news.ycombinator.com/item?i… 2d││                                                                    │
│   󰉢 daniel@matv.io               3d││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││  ────────────────────────────────────────────────────────────────  │
│                                    ││  Copied   1 hour ago · Zen                                         │
╰────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯

 ↵ copy  h copy as rgb/hsl  p pin  x delete  / search  ?
