crates/clipboard/src/snapshots/telmo_clipboard__ui__tests__empty.snap
---
source: crates/clipboard/src/ui.rs
expression: render(&f)
---
 Clipboard                                                                                            empty

╭─ History ──────────────────────────╮╭─ Clipboard ────────────────────────────────────────────────────────╮
│                                    ││                                                                    │
│  Nothing copied yet.               ││  Everything you copy shows up here: text, links,                   │
│                                    ││  images, colors and files.                                         │
│                                    ││                                                                    │
│                                    ││  Keeps the last 50 items for 30 days.                              │
│                                    ││  Pins stay until you remove them.                                  │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
╰────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯

 ?   esc close
