crates/clipboard/src/snapshots/telmo_clipboard__ui__tests__file.snap
---
source: crates/clipboard/src/ui.rs
expression: render(&f)
---
 Clipboard                                                                          13 items · last 30 days

╭─ History ──────────────────────────╮╭─ File ─────────────────────────────────────────────────────────────╮
│  Pinned                            ││                                                                    │
│   󰉢 ssh daniel@mantle -t tmux at… 󰐃││  󰈔  invoice-2026-10.pdf                                            │
│   󰉢 +54 9 11 5555 0142            󰐃││     ~/Downloads                                                    │
│  Recent                            ││                                                                    │
│   󰉢 sudo darwin-rebuild switch … 2m││  Copying puts the file back, ready to paste in Finder.             │
│   󰋩 Screenshot 1440×900          5m││                                                                    │
│   󰌷 github.com/syntheit/telmo/… 18m││                                                                    │
│   󰏘 #7aa2f7                      1h││                                                                    │
│   󰉢 Meeting moved to 3:30, same… 1h││                                                                    │
│ ▌ 󰈔 invoice-2026-10.pdf          3h││                                                                    │
│   󰅩 fn main() { println!("hello… 5h││                                                                    │
│   󰉢 hunter2-correct-hors… yesterday││                                                                    │
│   󰋩 IMG_4021.HEIC 4032×3… yesterday││                                                                    │
│   󰌷 news.ycombinator.com/item?i… 2d││                                                                    │
│   󰉢 daniel@matv.io               3d││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││  ────────────────────────────────────────────────────────────────  │
│                                    ││  Copied   3 hours ago · Finder                                     │
│                                    ││  Size     184 KB · PDF document                                    │
╰────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯

 ↵ copy  o open  r reveal  p pin  x delete  / search  ?
