crates/clipboard/src/snapshots/telmo_clipboard__ui__tests__image_loading.snap
---
source: crates/clipboard/src/ui.rs
expression: render(&f)
---
 Clipboard                                                                          13 items · last 30 days

╭─ History ──────────────────────────╮╭─ Image ────────────────────────────────────────────────────────────╮
│  Pinned                            ││                                                                    │
│   󰉢 ssh daniel@mantle -t tmux at… 󰐃││  Loading…                                                          │
│   󰉢 +54 9 11 5555 0142            󰐃││                                                                    │
│  Recent                            ││                                                                    │
│   󰉢 sudo darwin-rebuild switch … 2m││                                                                    │
│ ▌ 󰋩 Screenshot 1440×900          5m││                                                                    │
│   󰌷 github.com/syntheit/telmo/… 18m││                                                                    │
│   󰏘 #7aa2f7                      1h││                                                                    │
│   󰉢 Meeting moved to 3:30, same… 1h││                                                                    │
│   󰈔 invoice-2026-10.pdf          3h││                                                                    │
│   󰅩 fn main() { println!("hello… 5h││                                                                    │
│   󰉢 hunter2-correct-hors… yesterday││                                                                    │
│   󰋩 IMG_4021.HEIC 4032×3… yesterday││                                                                    │
│   󰌷 news.ycombinator.com/item?i… 2d││                                                                    │
│   󰉢 daniel@matv.io               3d││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││  ────────────────────────────────────────────────────────────────  │
│                                    ││  Copied   5 min ago · Screenshot                                   │
│                                    ││  Size     1440 × 900 · 412 KB · PNG                                │
╰────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯

 ↵ copy  p pin  x delete  / search  ?
