crates/clipboard/src/snapshots/telmo_clipboard__ui__tests__link.snap
---
source: crates/clipboard/src/ui.rs
expression: render(&f)
---
 Clipboard                                                                          13 items · last 30 days

╭─ History ──────────────────────────╮╭─ Link ─────────────────────────────────────────────────────────────╮
│  Pinned                            ││                                                                    │
│   󰉢 ssh daniel@mantle -t tmux at… 󰐃││  https://github.com/syntheit/telmo/pull/12                         │
│   󰉢 +54 9 11 5555 0142            󰐃││                                                                    │
│  Recent                            ││  github.com  ·  /syntheit/telmo/pull/12                            │
│   󰉢 sudo darwin-rebuild switch … 2m││                                                                    │
│   󰋩 Screenshot 1440×900          5m││                                                                    │
│ ▌ 󰌷 github.com/syntheit/telmo/… 18m││                                                                    │
│   󰏘 #7aa2f7                      1h││                                                                    │
│   󰉢 Meeting moved to 3:30, same… 1h││                                                                    │
│   󰈔 invoice-2026-10.pdf          3h││                                                                    │
│   󰅩 fn main() { println!("hello… 5h││                                                                    │
│   󰉢 hunter2-correct-hors… yesterday││                                                                    │
│   󰋩 IMG_4021.HEIC 4032×3… yesterday││                                                                    │
│   󰌷 news.ycombinator.com/item?i… 2d││                                                                    │
│   󰉢 daniel@matv.io               3d││                                                                    │
│                                    ││                                                                    │
│                                    ││                                                                    │
│                                    ││  ────────────────────────────────────────────────────────────────  │
│                                    ││  Copied   18 min ago · Zen                                         │
│                                    ││  Size     41 characters                                            │
╰────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯

 ↵ copy  o open  p pin  x delete  / search  ?
